--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "digital-garden",
-  "version": "0.7.2",
+  "name": "blog",
+  "version": "0.1",
   "private": true,
-  "repository": "https://github.com/thedevdavid/digital-garden",
+  "repository": "https://github.com/JeremyPersing/blog",
   "author": {
-    "name": "David Levai",
-    "url": "https://twitter.com/thedevdavid"
+    "name": "Jeremy Persing"
   },
   "scripts": {
     "dev": "next dev",
@@ -13,8 +12,7 @@
     "start": "next start",
     "preview": "next build && next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md,mdx,js,jsx,json,mjs}\"",
-    "prepare": "husky install"
+    "format": "prettier --write \"**/*.{ts,tsx,md,mdx,js,jsx,json,mjs}\""
   },
   "dependencies": {
     "@hookform/resolvers": "3.3.1",
@@ -68,7 +66,6 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-prettier": "9.0.0",
-    "husky": "8.0.3",
     "lint-staged": "14.0.1",
     "postcss": "8.4.29",
     "prettier": "3.0.3",
